--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,18 +1,18 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
- 
     font-family: fantasy, sans-serif;
+	background: rgb(2,0,36);
+	
 }
 
 header {
-
     padding-top: 50px;
     padding-bottom: 50px;
 
     h1 {
-        color: #434;
+        color: rgb(225, 228, 233);
         font-size: 35px;
         font-weight: 500;
         text-align: center;
@@ -21,8 +21,8 @@ header {
 }
 
 .content-wrap {
-	display: flex;
 
+	
 	aside {
 		flex: 1 1 250px;
 		max-width: 250px;
@@ -71,7 +71,8 @@ header {
 
 			.search-box {
 				display: flex;
-				justify-content: flex-end;
+				margin-top: 20px;
+				justify-content: center;
 				flex: 1 1 0%;
 				
 				input {
@@ -82,7 +83,7 @@ header {
 
 					display: block;
 					width: 100%;
-					max-width: 400px;
+					max-width: 40%;
 					padding: 16px;
 					border-radius: 999px;
 					background-color: #EEE;
@@ -114,6 +115,7 @@ header {
 
 				a {
 					text-decoration: none;
+		
 				}
 
 				figure {
@@ -133,7 +135,8 @@ header {
 				}
 
 				h3 {
-					color: #313131;
+					color: #EEE;
+					font-weight: 200;
 				}
 
 				&:hover {
@@ -147,4 +150,79 @@ header {
 			}
 		}
 	}
-} */
+} 
+
+logo-slider {
+   
+	$min-image-size: 250px;
+	$max-image-size: 250px;
+	
+	--image-size: #{$max-image-size};
+	
+	padding: 20px;
+	overflow: hidden;
+	max-width: 900px;
+	width: 98%;
+	margin: 0 auto;	
+	  position: relative;
+	  display: flex;
+  
+	  &:hover div {
+		  animation-play-state: paused;
+	  }
+	  
+	  div { 
+		  display: flex;
+		  position: relative;
+		  animation: marquee 30s linear infinite;
+	  justify-content: space-around;
+	  
+	  // Debug: This is just to help see where the loop happens
+	  // &:nth-of-type(1) { &, img { border:1px dashed red;  }}
+	  // &:nth-of-type(2) { &, img { border:1px dashed blue; }}
+	  
+	  // You may need this if there are too few images for the banner width
+	  //min-width:100%;
+	  
+	  }
+		  
+	  img {
+		  display: block;
+		  min-width: var(--image-size);
+		  height: var(--image-size);
+		  margin: 0 1vw;
+		  border-radius: 16px;
+		  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+		  transition: 0.4s;
+
+	  }
+	
+	&:after {
+		  content: "";
+		  position: absolute;
+		  width: 100%;
+		  height: 100%;
+		  left: 0;
+		  top: 0;
+		  background: linear-gradient(to right, rgb(2,0,36), rgba(rgb(2,0,36), 0) 80px, rgba(rgb(2,0,36), 0) calc(100% - 80px), rgb(2,0,36));
+	  }
+	
+	@media (max-width:900px) {
+	  --image-size: #{$min-image-size};
+	  --image-size: min(max(#{$min-image-size}, 10vw), #{$max-image-size});
+	  }
+  
+  }
+  
+  @keyframes marquee {
+	  0%   { transform: translateX(0%); }
+	  100% { transform: translateX(-100%); }
+  }
+
+h2, h4 {
+	display: flex;
+	font-weight: 300;
+	
+	color:#FFF;
+	justify-content: center;
+}
