--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -1,10 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: fantasy, sans-serif;
-  background: #020024;
+  font-family: 'Quicksand', sans-serif;
 }
 
 header {
@@ -13,10 +13,15 @@ header {
 }
 
 header h1 {
-  color: #e1e4e9;
+  color: black;
   font-size: 35px;
-  font-weight: 500;
+  font-weight: 200;
   text-align: center;
+}
+
+header strong {
+  color: #5d8cd8;
+  font-weight: 400;
 }
 
 .content-wrap aside {
@@ -34,7 +39,8 @@ header h1 {
 
 .content-wrap aside nav h3 {
   color: #313131;
-  font-size: 24px;
+  font-size: 21px;
+  font-weight: 200;
   margin-bottom: 16px;
 }
 
@@ -62,6 +68,60 @@ header h1 {
       -ms-flex: 1 1 0%;
           flex: 1 1 0%;
   padding: 0px 16px;
+  /* .anime-list {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			margin-top: 32px;
+			margin: 32px -8px 0px;
+			position: relative;
+
+			.anime-card {
+				
+				a {
+					text-decoration: none;
+				}
+
+				figure {
+					display: block;
+					margin: 20px;
+					
+
+					img {
+						display: block;
+						margin:auto auto;
+						max-width: 100%;
+						height: 350px;
+						object-fit: cover;
+						border-radius: 16px;
+						box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+					}
+						transition: 0.4s;
+				}
+
+				figcaption {
+					display: block;
+					justify-content: center;
+					align-items: center;
+					text-align: center;
+				
+				}
+
+				h3 {
+					color: #000;
+					font-weight: 200;
+				}
+
+				&:hover {
+					figure {
+						img {
+							box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
+							transform: scale(1.05);
+						}
+					}
+				}
+			}
+		} */
 }
 
 .content-wrap main .main-head {
@@ -124,146 +184,219 @@ header h1 {
   color: #FFF;
 }
 
-.content-wrap main .anime-list {
+.container {
+  min-height: 50vh;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.slider {
+  height: 250px;
+  margin: auto;
+  position: relative;
+  width: 90%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+
+.slide-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc(250px * 20);
+  -webkit-animation: scroll 40s linear infinite;
+          animation: scroll 40s linear infinite;
+}
+
+.slide-track:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-250px * 9));
+            transform: translateX(calc(-250px * 9));
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-250px * 9));
+            transform: translateX(calc(-250px * 9));
+  }
+}
+
+.slide {
+  height: 200px;
+  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+  -webkit-perspective: 100px;
+          perspective: 100px;
+}
+
+img {
+  width: 80%;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+  border-radius: 16px;
+  -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+}
+
+img:hover {
+  -webkit-transform: translateZ(10px);
+          transform: translateZ(10px);
+}
+
+.slider::before,
+.slider::after {
+  background: -webkit-gradient(linear, left top, right top, from(white), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+  content: '';
+  height: 100%;
+  position: absolute;
+  height: 100%;
+  width: 15%;
+  z-index: 2;
+}
+
+.slider::before {
+  left: 0;
+  top: 0;
+}
+
+.slider::after {
+  right: 0;
+  top: 0;
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
+}
+
+.container-1 {
+  margin: 15px;
+  padding: 15px;
+}
+
+.img-footer {
+  margin: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.anime-card {
+  background-color: #0b0a16;
+  border-radius: 5px;
+  -webkit-box-shadow: 3px 3px 5px rgba(24, 20, 20, 0.336);
+          box-shadow: 3px 3px 5px rgba(24, 20, 20, 0.336);
+  width: 200px;
+  overflow: hidden;
+  position: relative;
+  margin: 1em;
+  color: #FFF;
+  margin-top: 2rem;
+}
+
+.anime-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 32px;
-  margin: 32px -8px 0px;
-}
-
-.content-wrap main .anime-list .anime-card {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 33.333%;
-          flex: 1 1 33.333%;
-  max-width: 33.333%;
-  padding: 16px 8px;
-}
-
-.content-wrap main .anime-list .anime-card a {
-  text-decoration: none;
-}
-
-.content-wrap main .anime-list .anime-card figure {
-  display: block;
-  margin-bottom: 16px;
-}
-
-.content-wrap main .anime-list .anime-card figure img {
-  display: block;
-  width: 100%;
-  height: 350px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 16px;
-  -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.content-wrap main .anime-list .anime-card h3 {
-  color: #EEE;
-  font-weight: 200;
-}
-
-.content-wrap main .anime-list .anime-card:hover figure img {
-  -webkit-box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.25);
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-}
-
-logo-slider {
-  --image-size: 250px;
-  padding: 20px;
-  overflow: hidden;
-  max-width: 900px;
-  width: 98%;
-  margin: 0 auto;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-logo-slider:hover div {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-}
-
-logo-slider div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  -webkit-animation: marquee 30s linear infinite;
-          animation: marquee 30s linear infinite;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-logo-slider img {
-  display: block;
-  min-width: var(--image-size);
-  height: var(--image-size);
-  margin: 0 1vw;
-  border-radius: 16px;
-  -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-logo-slider:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: linear-gradient(to right, #020024, rgba(2, 0, 36, 0) 80px, rgba(2, 0, 36, 0) calc(100% - 80px), #020024);
-}
-
-@media (max-width: 900px) {
-  logo-slider {
-    --image-size: 250px;
-    --image-size: min(max(250px, 10vw), 250px);
-  }
-}
-
-@-webkit-keyframes marquee {
-  0% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
-  }
-}
-
-@keyframes marquee {
-  0% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
-  }
-}
-
-h2, h4 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-weight: 300;
-  color: #FFF;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.anime-card img {
+  width: 100%;
+}
+
+.anime-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1rem;
+}
+
+.anime-info h3 {
+  font-weight: 300;
+  font-size: 16px;
+  margin: 0;
+}
+
+.anime-info h3 {
+  font-weight: 300;
+  font-size: 15px;
+  margin: 0;
+}
+
+.anime-over {
+  background-color: #fff;
+  position: absolute;
+  color: #000;
+  padding: 1rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+.anime-over h3 {
+  font-size: 15;
+  font-weight: 300;
+}
+
+.anime-over p {
+  font-size: 11;
+  font-weight: 100;
+}
+
+.anime-card:hover .anime-over {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+.messageScore {
+  color: #5d8cd8;
+}
+
+.messageSearch {
+  margin-top: 20px;
+  text-align: center;
+  font-weight: 400;
 }
 /*# sourceMappingURL=main.css.map */
