--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,23 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: fantasy, sans-serif;
-	background: rgb(2,0,36);
-	
+    font-family: 'Quicksand', sans-serif;	
 }
+
+
 
 header {
     padding-top: 50px;
     padding-bottom: 50px;
 
     h1 {
-        color: rgb(225, 228, 233);
+		color: rgb(0, 0, 0);
+        
         font-size: 35px;
-        font-weight: 500;
+        font-weight: 200;
         text-align: center;
-
     }
+
+	strong{
+		color: rgb(93, 140, 216);
+		font-weight: 400;
+		
+	}
 }
 
 .content-wrap {
@@ -34,7 +42,8 @@ header {
 
 			h3 {
 				color: #313131;
-				font-size: 24px;
+				font-size: 21px;
+				font-weight: 200;
 				margin-bottom: 16px;
 			}
 
@@ -102,40 +111,47 @@ header {
 			}
 		}
 
-		.anime-list {
+		/* .anime-list {
 			display: flex;
 			flex-wrap: wrap;
+			justify-content: center;
 			margin-top: 32px;
 			margin: 32px -8px 0px;
+			position: relative;
 
 			.anime-card {
-				flex: 1 1 33.333%;
-				max-width: 33.333%;
-				padding: 16px 8px;
-
+				
 				a {
 					text-decoration: none;
-		
 				}
 
 				figure {
 					display: block;
-					margin-bottom: 16px;
+					margin: 20px;
+					
 
 					img {
 						display: block;
-						width: 100%;
+						margin:auto auto;
+						max-width: 100%;
 						height: 350px;
 						object-fit: cover;
 						border-radius: 16px;
 						box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-
-						transition: 0.4s;
 					}
+						transition: 0.4s;
+				}
+
+				figcaption {
+					display: block;
+					justify-content: center;
+					align-items: center;
+					text-align: center;
+				
 				}
 
 				h3 {
-					color: #EEE;
+					color: #000;
 					font-weight: 200;
 				}
 
@@ -148,81 +164,178 @@ header {
 					}
 				}
 			}
-		}
+		} */
 	}
 } 
+.container{
+	min-height: 50vh;
+	display: grid;
+	place-items: center;
+}
 
-logo-slider {
-   
-	$min-image-size: 250px;
-	$max-image-size: 250px;
-	
-	--image-size: #{$max-image-size};
-	
-	padding: 20px;
+.slider{
+	height: 250px;
+	margin: auto;
+	position: relative;
+	width: 90%;
+	display: grid;
+	place-items: center;
 	overflow: hidden;
-	max-width: 900px;
-	width: 98%;
-	margin: 0 auto;	
-	  position: relative;
-	  display: flex;
-  
-	  &:hover div {
-		  animation-play-state: paused;
-	  }
-	  
-	  div { 
-		  display: flex;
-		  position: relative;
-		  animation: marquee 30s linear infinite;
-	  justify-content: space-around;
-	  
-	  // Debug: This is just to help see where the loop happens
-	  // &:nth-of-type(1) { &, img { border:1px dashed red;  }}
-	  // &:nth-of-type(2) { &, img { border:1px dashed blue; }}
-	  
-	  // You may need this if there are too few images for the banner width
-	  //min-width:100%;
-	  
-	  }
-		  
-	  img {
-		  display: block;
-		  min-width: var(--image-size);
-		  height: var(--image-size);
-		  margin: 0 1vw;
-		  border-radius: 16px;
-		  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
-		  transition: 0.4s;
+}
 
-	  }
-	
-	&:after {
-		  content: "";
-		  position: absolute;
-		  width: 100%;
-		  height: 100%;
-		  left: 0;
-		  top: 0;
-		  background: linear-gradient(to right, rgb(2,0,36), rgba(rgb(2,0,36), 0) 80px, rgba(rgb(2,0,36), 0) calc(100% - 80px), rgb(2,0,36));
-	  }
-	
-	@media (max-width:900px) {
-	  --image-size: #{$min-image-size};
-	  --image-size: min(max(#{$min-image-size}, 10vw), #{$max-image-size});
-	  }
-  
-  }
-  
-  @keyframes marquee {
-	  0%   { transform: translateX(0%); }
-	  100% { transform: translateX(-100%); }
-  }
-
-h2, h4 {
+.slide-track{
 	display: flex;
-	font-weight: 300;
+	width: calc(250px * 20);
+	animation: scroll 40s linear infinite;
+
+}
+
+.slide-track:hover{
+	animation-play-state: paused;
+}
+
+@keyframes scroll{
+	0%{
+		transform: translateX(0);
+	}
+	100%{
+		transform: translateX(calc(-250px * 9));
+	}
+}
+
+.slide{
+	height: 200px;
+	width: 250px;
+	display: flex;
+	align-items: center;
+	padding: 15px;
+	perspective: 100px;
+}
+
+img{
+	width: 80%;
+	transition: transform 1s;
+	border-radius: 16px;
+	box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.15);
+}
+
+img:hover{
+	transform: translateZ(10px);
+}
+
+.slider::before,
+.slider::after{
+	background: linear-gradient(to right, rgba(255,255,255,1) 0%,
+	rgba(255,255,255,0) 100%);
+	content: '';
+	height: 100%;
+	position: absolute;
+	height: 100%;
+	width: 15%;
+	z-index: 2;
+}
+
+.slider::before{
+	left: 0;
+	top: 0;
+}
+
+.slider::after{
+	right: 0;
+	top: 0;
+	transform:  rotateZ(180deg);
+}
+
+.container-1{
+	margin: 15px;
+	padding: 15px;
+
+}
+
+.img-footer{
+	margin: 5px;
+	display: flex;
+	justify-content: space-around;
+}
+
+
+
+.anime-card {
+	background-color: rgb(11, 10, 22);
+	border-radius: 5px;
+	box-shadow:  3px 3px 5px rgba(24, 20, 20, 0.336);
+	width: 200px;
+	overflow: hidden;
+	position: relative;
+	margin: 1em;
+	color: #FFF;	
+	margin-top: 2rem;
 	
-	color:#FFF;
+}
+
+.anime-container{
+	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
+}
+
+.anime-card img {
+	width: 100%;
+}
+
+.anime-info{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1rem;
+}
+
+.anime-info h3 {
+	font-weight: 300;
+	font-size: 16px;
+	margin: 0;	
+}
+
+
+.anime-info h3 {
+	font-weight: 300;
+	font-size: 15px;
+	margin: 0;	
+}
+
+
+.anime-over {
+	background-color: #fff;
+	position: absolute;
+	color: #000;
+	padding: 1rem;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	transform: translateX(100%);
+	transition: transform 0.3s ease-in-out;
+}
+
+.anime-over h3{
+	font-size: 15;
+	font-weight: 300;
+}
+
+.anime-over p{
+	font-size: 11;
+	font-weight: 100;
+}
+
+.anime-card:hover .anime-over{
+	transform: translateX(0%)
+}
+
+.messageScore {
+	color:rgb(93, 140, 216)
+}
+
+.messageSearch{
+	margin-top: 20px;
+	text-align: center;
+	font-weight: 400;
 }
